# SFML-Zombies

./: .gitignore  CMakeLists.txt  README.md  entities.json
src/: game.cpp  game.hpp  main.cpp  tests.cpp  tests.hpp
src/ecs/: Components.hpp  Registry.hpp
src/ecs_simple/: Components.cpp  Components.hpp  Managers.cpp  Managers.hpp  Registry.cpp  Registry.hpp  SoundManager.cpp  SoundManager.hpp  Systems.cpp  Systems.hpp
src/ecs_simple/utils/: helpers.cpp  helpers.hpp
